# ks1997616

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  villa_financial_model.md
.github/workflows/: test.yml
.streamlit/: config.toml  secrets.toml.example
docs/: index.html
examples/: sample_hearing.xlsx
lib/: styles.py
pages/: 1_省力化補助金申請.py
research/: kyoto-subsidy-research.md
scripts/: auto_fix.py  config.py  content_generator.py  diagram_generator.py  document_writer.py  financial_utils.py  hearing_reader.py  main.py  models.py  other_documents.py  pdf_extractor.py  plan3_writer.py  process_templates.py  test_financial.py  test_validate.py  transcription_to_hearing.py  validate.py
slides/: week1_ai_introduction.html  week1_ai_introduction.md
src/: __init__.py  agent.py  lark_client.py  main.py  speech_recognizer.py
templates/: 事業実施場所リスト_様式.xlsx  事業計画書_その1その2_様式.docx  事業計画書_その3_様式.xlsx  他の補助金使用実績_様式.xlsx  役員名簿_様式.xlsx  従業員名簿_様式.xlsx  株主出資者名簿_様式.xlsx  給与支給総額確認書_様式.xlsx  賃金引上げ要件_事業場内_様式.xlsx  賃金引上げ要件_地域別_様式.xlsx  金融機関確認書_様式.docx
